====================
django-organizations
====================

0.1.3
-----

* Added configurable context variable names to view mixins
* Added a base backend class which the Invitation and Registration backends extend

0.1.2
-----

* Added registration backend
* Various bug fixes

0.1.1
-----

* Add RequestContext to default invitation registration view
* Fix invitations

0.1.0
-----

* Initial alpha application