@@ -5,8 +5,10 @@ django-organizations
 0.1.3
 -----
 
+* Manage organization models with South
 * Added configurable context variable names to view mixins
 * Added a base backend class which the Invitation and Registration backends extend
+* Lengthed Organization name and slug fields
 
 0.1.2
 -----
